still fixing right white space in mobile

--- a/front/src/styles/partials/_modal.scss
+++ b/front/src/styles/partials/_modal.scss
@@ -64,9 +64,9 @@
     color                 : black;
     font-size             : 3rem;
     background-color      :  gray;
-    padding-top           : 10px;
+    padding-top           : 7px;
     line-height           : 1.8rem;
-    letter-spacing        : .8rem;
+    letter-spacing        : .6rem;
     text-transform        : uppercase;
     font-family           : 'Kanit', sans-serif;
   }
